--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,20 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "fastapi>=0.128.0",
+    "langchain>=1.2.6",
+    "matplotlib>=3.10.8",
+    "numpy>=2.4.1",
+    "openai>=2.15.0",
+    "pandas>=2.3.3",
+    "psycopg2-binary>=2.9.11",
+    "pydantic>=2.12.5",
+    "pytest>=9.0.2",
+    "python-dotenv>=1.2.1",
+    "rich>=14.2.0",
+    "seaborn>=0.13.2",
+    "sqlalchemy>=2.0.45",
+    "sqlparse>=0.5.5",
+    "uvicorn>=0.40.0",
+]
