one package installed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.128.0",
     "langchain>=1.2.6",
+    "langchain-openai>=1.1.7",
     "matplotlib>=3.10.8",
     "numpy>=2.4.1",
     "openai>=2.15.0",
